--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.14.1",
-    "@astrojs/mdx": "^0.16.0",
-    "@astrojs/sitemap": "^1.0.1",
-    "@astrojs/tailwind": "^3.0.1",
+    "@astrojs/mdx": "^0.16.2",
+    "@astrojs/sitemap": "^1.3.3",
+    "@astrojs/tailwind": "^3.1.3",
     "@fontsource/inter": "^4.5.15",
-    "astro": "^2.0.11",
+    "@fontsource/poppins": "^4.5.10",
+    "animate.css": "^4.1.1",
+    "astro": "^2.6.3",
     "astro-feather-icons": "^1.0.2",
-    "astro-icon": "^0.8.0",
-    "astro-navbar": "^1.1.5",
-    "astro-seo": "^0.7.0",
-    "tailwindcss": "^3.2.4"
+    "astro-icon": "^0.8.1",
+    "astro-navbar": "^1.2.0",
+    "astro-seo": "^0.7.4",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
