--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "animate.css": "^4.1.1",
     "astro": "^2.6.3",
     "astro-feather-icons": "^1.0.2",
-    "astro-icon": "^0.8.1",
+    "astro-icon": "0.8.0",
     "astro-navbar": "^1.2.0",
     "astro-seo": "^0.7.4",
+    "iconoir": "^6.8.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
