--- a/package.json
+++ b/package.json
@@ -11,22 +11,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.16.2",
-    "@astrojs/sitemap": "^3.1.2",
-    "@astrojs/tailwind": "^3.1.3",
-    "@fontsource/inter": "^4.5.15",
-    "@fontsource/poppins": "^4.5.10",
+    "@astrojs/mdx": "^4.2.5",
+    "@astrojs/sitemap": "^3.3.1",
+    "@fontsource/inter": "^5.2.5",
+    "@fontsource/poppins": "^5.2.5",
+    "@tailwindcss/vite": "^4.1.4",
     "animate.css": "^4.1.1",
-    "astro": "^4.5.16",
+    "astro": "^5.7.5",
     "astro-feather-icons": "^1.0.2",
-    "astro-icon": "1.1.0",
-    "astro-navbar": "^2.3.1",
-    "astro-seo": "^0.8.3",
-    "iconoir": "^7.5.0",
-    "tailwindcss": "^3.4.3"
+    "astro-icon": "1.1.5",
+    "astro-navbar": "^2.3.9",
+    "astro-seo": "^0.8.4",
+    "iconoir": "^7.11.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.12",
-    "sharp": "^0.31.3"
-  }
+    "@tailwindcss/typography": "^0.5.16",
+    "sharp": "^0.34.1"
+  },
+  "packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f"
 }
